添加一个新类classB 并修改test1中的头文件

--- a/test1/test1/test1.vcxproj.filters
+++ b/test1/test1/test1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="classA.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="classB.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="classA.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="classB.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
